Pfp code cleanup, fix profile not showing all  tickets and link to profile from comments

--- a/public/css/TicketDetails.css
+++ b/public/css/TicketDetails.css
@@ -1054,3 +1054,11 @@
     padding-left: 8px;
   }
 }
+
+.no-link:link { text-decoration: none; }
+.no-link:visited { text-decoration: none; }
+.no-link:hover { text-decoration: none; }
+.no-link:active { text-decoration: none; }
+.no-link {
+  color: inherit;
+}
